# src/routes/auditLogRoutes.js
@@ -1,0 +1,8 @@
+const express = require('express');
+const router = express.Router();
+const auditLogController = require('../controllers/auditLogController');
+
+router.get('/', auditLogController.findAll);
+router.get('/:id', auditLogController.findOne);
+
+module.exports = router;
